force-app/main/default/objects/Journey_Entry_Log__c/Journey_Entry_Log__c.object-meta.xml
<CustomObject>
    <label>Journey Entry Log</label>
    <pluralLabel>Journey Entry Logs</pluralLabel>
    <description>One row per journey entry decision, allowed or blocked, with the reason. Makes "why was this person messaged twice" a queryable answer.</description>
</CustomObject>