force-app/main/default/objects/Journey_Entry_Log__c/fields/Consent_Verified__c.field-meta.xml
<CustomField>
    <fullName>Consent_Verified__c</fullName>
    <label>Consent_Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>