force-app/main/default/objects/Journey_Entry_Log__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>Allowed</fullName><label>Allowed</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Blocked</fullName><label>Blocked</label></value></valueSetDefinition>
    </valueSet>
</CustomField>