force-app/main/default/objects/Journey_Entry_Log__c/fields/EntryEvent__c.field-meta.xml
<CustomField>
    <fullName>EntryEvent__c</fullName>
    <label>Entry Event</label>
    <type>Text</type>
    <length>80</length>
</CustomField>