force-app/main/default/objects/Journey_Entry_Log__c/fields/EvaluatedAt__c.field-meta.xml
<CustomField>
    <fullName>EvaluatedAt__c</fullName>
    <label>Evaluated At</label>
    <type>DateTime</type>
</CustomField>