force-app/main/default/objects/Journey_Entry_Log__c/fields/Frequency_Cap_Applied__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Cap_Applied__c</fullName>
    <label>Frequency_Cap_Applied</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>