force-app/main/default/objects/Journey_Entry_Log__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey</label>
    <type>Text</type>
    <length>80</length>
</CustomField>