force-app/main/default/objects/Journey_Entry_Log__c/fields/ReEntry_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ReEntry_Allowed__c</fullName>
    <label>Re Entry_Allowed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>